--- a/package.json
+++ b/package.json
@@ -27,15 +27,17 @@
     "node": ">=12"
   },
   "dependencies": {
+    "axios": "^1.6.2",
     "chai": "^4.3.6",
     "cross-env": "^7.0.3",
     "cucumber": "^6.0.7",
     "cucumber-junit-formatter": "^0.2.2",
     "mocha": "^10.0.0",
-    "mocha-multi-reporters": "^1.5.1",
     "mocha-junit-reporter": "^2.0.2",
+    "mocha-multi-reporters": "^1.5.1",
     "npm-run-all": "4.1.5",
     "rimraf": "^3.0.2",
-    "sinon": "^14.0.0"
+    "sinon": "^14.0.0",
+    "uuid": "^9.0.1"
   }
 }
